<resources>
    <string name="app_name">Java Studio</string>

    <string name="splash_tip">一个 Android 端的 Java IDE</string>
    <string name="splash_interest">兴趣是最好的老师</string>
    <string name="splash_loading">载入中</string>
    <string name="splash_copyright">Copyright 2018–2019 by 小玉 .All rights reserved.</string>
    <string name="splash_skip_time">s 跳过</string>

    <!--  提示信息相关  -->
    <string name="tips_no_content">暂时没有内容</string>
    <string name="tips_open">打开</string>
    <string name="tips_open_app">该网页想要打开外部App</string>
    <string name="tips_no_internet">没有网络连接</string>
    <string name="tips_twice_again">再次返回操作退出系统</string>
    <string name="tips_no_data">暂无数据</string>

    <string name="dialog_loading">加载中，请稍等</string>
    <string name="dialog_done">确定</string>
    <string name="dialog_clear">取消</string>

    <string name="project_notice">软件公告：Java 编译器</string>
    <string name="project_menu_refresh">刷新</string>
    <string name="project_menu_new">新建</string>
    <string name="project_menu_import">导入</string>
    <string name="project_menu_clean">清洁项目</string>
    <string name="project_un_select">未选择项目</string>
    <string name="project_no_data">请新建一个项目</string>
    <string name="project_clean_success">：清理成功</string>
    <string name="project_name">Java 项目名</string>
    <string name="project_cant_null">项目名称不能为空</string>
    <string name="project_is_delete">是否删除该项目：%s？</string>
    <string name="project_is_delete_item">是否删除该条目？</string>
    <string name="project_no_open">未打开项目</string>
    <string name="project_code_file_size">源文件数目：</string>
    <string name="project_now">工程：</string>
    <string name="project_cant_open">无法打开该文件</string>
    <string name="project_parent_name">父目录</string>
    <string name="project_package_name">包名</string>
    <string name="project_input_package">请输入包名</string>
    <string name="project_create_project">新建一个 Java Project</string>
    <string name="project_create_class">新建一个 Java Class</string>


    <string name="open_error">打开失败</string>
    <string name="save_success">保存成功</string>
    <string name="save_error">保存失败</string>
    <string name="splash_text">Hello World!\nI am Java!</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="main_editor">编辑器</string>
    <string name="main_tool">工具箱</string>
    <string name="main_project">项目树</string>
    <string name="main_document">文档库</string>
    <string name="double_exit">再按一次返回键退出</string>
    <string name="refresh">刷新</string>
    <string name="share">分享</string>
    <string name="open_web">在浏览器中打开</string>
    <string name="copy_link">复制此链接</string>
    <string name="collection">收藏</string>
    <string name="cant_refresh">无法刷新</string>
    <string name="cant_copy">此链接无法复制</string>
    <string name="copy_right">复制成功</string>
    <string name="cant_open">无法打开</string>
    <string name="open_app">即将打开App</string>
    <string name="no_open_app">未安装该应用</string>
    <string name="web_details">网页详情</string>
    <string name="no_internet">没有网络连接</string>
    <string name="double_close_web">再按一次返回关闭网页</string>
    <string name="apply_me_key">fkx01097fafqwfnmxjtzu1c</string>
    <string name="saving">保存中</string>
    <string name="tip">提示</string>
    <string name="done">确定</string>
    <string name="clear">取消</string>
    <string name="down_tip">下载提示</string>
    <string name="download_ing">文件下载中</string>
    <string name="down_trip">下载提示</string>
    <string name="download_now">立即下载</string>
    <string name="file_name">文件名</string>
    <string name="size">大小</string>
    <string name="download_dir">下载位置</string>
    <string name="open_file">打开文件</string>
    <string name="download_error">下载失败</string>
    <string name="ad_layout">谢谢支持</string>
    <string name="title_activity_settings">设置中心</string>
    <string name="setting_editor">编辑器设置</string>
    <string name="setting_compile">编译器设置</string>
    <string name="setting_default">恢复默认设置</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="donate">打赏小编ヾ|≧_≦|〃</string>
    <string name="no_apply_app">你好像没有安装支付宝</string>
    <string name="setting_about">关于</string>
    <string name="setting_restore">恢复默认参数</string>
    <string name="jar_search">Maven 依赖搜索</string>
    <string name="jar_search_tip">根据关键词查询网络中的依赖库Jar文件\n通过查询到的Maven地址，可以很方便导入到你的项目里并使用</string>
    <string name="brvah_loading">正在加载中....</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="empty_tip">暂无数据ԅ(¯﹃¯ԅ)</string>
    <string name="copy_jar">复制依赖地址</string>
    <string name="project_package_class">类名</string>
    <string name="project_package_kind">类型</string>
    <string name="editor_log">编译输出日志</string>
</resources>
