<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.splash.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/splash_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="100dp"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/project_leaf_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/splash_tip"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="13.5sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/splash_interest"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/splash_skip_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ic_skip"
        android:gravity="center"
        android:minWidth="30dp"
        android:text="@string/splash_loading"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:alpha="0.7"
        android:text="@string/splash_copyright"
        android:textSize="10sp"
        tools:ignore="SmallSp" />
</RelativeLayout>