<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:alpha="0.7"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/project_create_class"
        android:textColor="?attr/colorText"
        android:textSize="16sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:alpha="0.6"
            android:gravity="center_vertical"
            android:text="@string/project_package_name"
            android:textColor="?attr/colorText"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/project_package_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:background="@color/transparent"
            android:gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:alpha="0.6"
            android:gravity="center_vertical"
            android:text="@string/project_package_class"
            android:textColor="?attr/colorText"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/project_class_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:alpha="0.6"
            android:gravity="center_vertical"
            android:hint="不需要输入后缀（.java）"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="?attr/colorText"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:alpha="0.6"
            android:gravity="center_vertical"
            android:text="@string/project_package_kind"
            android:textColor="?attr/colorText"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/project_radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/project_radio_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:alpha="0.6"
                android:checked="true"
                android:text="Class"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/project_radio_interface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:text="Interface"
                android:textSize="14sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/project_method"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="13dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/project_method_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:alpha="0.6"
            android:checked="true"
            android:gravity="center_vertical" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:text="public static void main(String[] args)"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>