<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/App.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/App.PopupOverlay"
            app:title="文档和帮助" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="JavaApi搜索 (Java SE8 中文文档)"
                        android:textColor="?colorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <AutoCompleteTextView
                        android:id="@+id/keyWordView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:background="@color/transparent"
                        android:hint="请输入Java类名"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/jar_search"
                        android:textColor="?colorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/jarSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:background="?selectableItemBackground"
                        android:lineSpacingExtra="5dp"
                        android:padding="10dp"
                        android:text="@string/jar_search_tip"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="Java 示例源码"
                        android:textColor="?colorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sampleLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:lineSpacingExtra="5dp"
                        android:padding="10dp"
                        android:text="作者从网络中收集的，适合初学者的 Java 源码示例，可以直接导入运行查看效果。"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/adCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:visibility="gone"
                app:cardCornerRadius="5dp"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/ad_layout"
                        android:textColor="?colorPrimary"
                        android:textSize="@dimen/main_title"
                        android:textStyle="bold" />

                    <FrameLayout
                        android:id="@+id/adContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="Java 爬虫教程"
                        android:textColor="?colorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/jsoupLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:lineSpacingExtra="5dp"
                        android:padding="10dp"
                        android:text="本栏目主要讲述 Java 的开源爬虫框架 Jsoup\n栏目内容包括模拟登录，提取网页指定内容，伪造请求头，获取验证码等等操作"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>